--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Tue Jul 20 10:02:56 BRT 2021
+#Sat Jul 24 00:28:19 CEST 2021
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
@@ -34,5 +35,5 @@ max-build-height=256
 level-seed=
 prevent-proxy-connections=false
 use-native-transport=true
-motd=A Minecraft Server
 enable-rcon=false
+motd=A Minecraft Server
